deploy: 1b88ada77c02fad3259c39e3356dcccbc1c43274

--- a/es/get-local-information/index.html
+++ b/es/get-local-information/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Información local y alertas</h1>
           
-            <p class="small-text">Last updated&nbsp;5 de noviembre de 2020 a las 9:58 a. m.</p>
+            <p class="small-text">Last updated&nbsp;25 de noviembre de 2020 a las 4:00 p. m.</p>
           
         </div>
       </div>
@@ -175,11 +175,7 @@
 
 
 
-<p>A cada condado de California se le asigna un nivel en función de su tasa de casos nuevos y de positividad. Verifique el <a href="/es/safer-economy/">estado del nivel de su condado</a> para ver qué negocios y actividades pueden abrir.</p>    <a class="action-link" href="/es/sign-up-for-county-alerts/"><span class="ca-gov-icon-warning-circle"></span> Regístrese para recibir alertas de su condado</a></p>
-
-
-
-<p>Cada ciudad, condado y gobierno local de California está trabajando para responder a la COVID-19. </p>
+<p>A cada condado de California se le asigna un nivel en función de su tasa de casos nuevos y de positividad. Verifique el <a href="/es/safer-economy/">estado del nivel de su condado</a> para ver qué negocios y actividades pueden abrir.</p>    <a class="action-link" href="/es/sign-up-for-county-alerts/"><span class="ca-gov-icon-warning-circle"></span><strong> Regístrese para recibir alertas de su condado</strong></a>    <p>Cada ciudad, condado y gobierno local de California está trabajando para responder a la COVID-19. </p>
 
 
 
