--- a/es/industry-guidance/index.html
+++ b/es/industry-guidance/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Guía para las industrias para reducir riesgos</h1>
           
-            <p class="small-text">Last updated&nbsp;16 de noviembre de 2020 a las 4:09 p. m.</p>
+            <p class="small-text">Last updated&nbsp;24 de noviembre de 2020 a las 7:23 p. m.</p>
           
         </div>
       </div>
@@ -1766,11 +1766,11 @@
 <p>Mínimo (amarillo)</p>
 <ul><li>Restaurantes: <ul><li>En interiores con modificaciones.</li><li>La capacidad debe limitarse al 50 %.</li></ul></li><li>Bodegas de vino:<ul><li>En interiores con modificaciones.</li><li>Se debe limitar al 50 % de la capacidad o a 200 personas, lo que sea menor.</li></ul></li><li>Bares, cervecerías y destilerías: <ul><li>En interiores con modificaciones.</li><li>La capacidad debe limitarse al 50 %.</li></ul></li></ul>
 <p>Restaurantes con comida para llevar</p>
-<ul><li>Siga esta <a href="https://files.covid19.ca.gov/pdf/guidance-take-out-restaurants--en.pdf">guía para restaurantes que ofrecen comida para llevar, en el coche y con entrega a domicilio</a> para crear un entorno más seguro para los trabajadores y los clientes. </li><li>Revise la guía y prepare un plan para su lugar de trabajo para mostrar a sus clientes y empleados que ha reducido el riesgo y que está abierto para trabajar.</li></ul>
+<ul><li>Siga esta <a href="https://files.covid19.ca.gov/pdf/guidance-take-out-restaurants--en.pdf">guía para restaurantes que ofrecen comida para llevar, en el coche y con entrega a domicilio</a> para crear un entorno más seguro para los trabajadores y los clientes.</li><li>Revise la guía y prepare un plan para su lugar de trabajo para mostrar a sus clientes y empleados que ha reducido el riesgo y que está abierto para trabajar.</li></ul>
 <p>Comida al aire libre</p>
 <ul><li>Siga esta <a href="https://files.covid19.ca.gov/pdf/guidance-outdoor-restaurants--en.pdf">guía para restaurantes que ofrecen comida al aire libre, para llevar, en el coche y con entrega a domicilio</a> para crear un entorno más seguro para los trabajadores y los clientes.</li><li>Revise la guía y prepare un plan para su lugar de trabajo para mostrar a sus clientes y empleados que ha reducido el riesgo y que está abierto para trabajar.</li></ul>
 <p>Restaurantes, bodegas de vino y bares</p>
-<ul><li>Siga esta <a href="https://files.covid19.ca.gov/pdf/guidance-restaurants-bars-wineries--es.pdf">guía para restaurantes, bodegas de vino y bares</a> para crear un entorno más seguro para los trabajadores y los clientes.</li><li>Revise la guía, prepare un plan y publique la <a href="https://files.covid19.ca.gov/pdf/checklist-restaurants-bars--es.pdf">lista de verificación para restaurantes, bodegas de vino y bares</a> en su lugar de trabajo para mostrar a sus clientes y empleados que ha reducido el riesgo y que está abierto para trabajar. </li></ul>
+<ul><li>Siga esta <a href="https://files.covid19.ca.gov/pdf/guidance-restaurants-bars-wineries--es.pdf">guía para restaurantes, bodegas de vino y bares</a> para crear un entorno más seguro para los trabajadores y los clientes.</li><li>Revise la guía, prepare un plan y publique la <a href="https://files.covid19.ca.gov/pdf/checklist-restaurants-bars--es.pdf">lista de verificación para restaurantes, bodegas de vino y bares</a> en su lugar de trabajo para mostrar a sus clientes y empleados que ha reducido el riesgo y que está abierto para trabajar.</li></ul>
 <p>Restaurantes tradicionales</p>
 <ul><li>Siga esta <a href="https://files.covid19.ca.gov/pdf/guidance-dine-in-restaurants--es.pdf">guía para restaurantes tradicionales</a> para crear un entorno más seguro para los trabajadores y los clientes.</li><li>Revise la guía, prepare un plan y publique la<a href="https://files.covid19.ca.gov/pdf/checklist-dine-in-restaurants--es.pdf"> lista de verificación para restaurantes tradicionales</a> en su lugar de trabajo para mostrar a sus clientes y empleados que ha reducido el riesgo y que está abierto para trabajar.</li></ul>
 
@@ -2106,7 +2106,7 @@
 
 
 
-    <!-- Ethnio Activation Code --> <script type="text/javascript" language="javascript" src="//ethn.io/22981.js" async="true" defer charset="utf-8"></script>    <p> </p>
+    <!-- Ethnio Activation Code --> <script type="text/javascript" language="javascript" src="//ethn.io/22981.js" async="true" defer="" charset="utf-8"></script>    <p> </p>
 </div>
     </div>
   </div>
