--- a/es/stay-home-except-for-essential-needs/index.html
+++ b/es/stay-home-except-for-essential-needs/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Restricciones por la COVID-19</h1>
           
-            <p class="small-text">Last updated&nbsp;23 de noviembre de 2020 a las 2:14 p. m.</p>
+            <p class="small-text">Last updated&nbsp;25 de noviembre de 2020 a las 12:47 p. m.</p>
           
         </div>
       </div>
@@ -1012,13 +1012,13 @@
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
       <div class="card-body">
-<p>Permanezca en su condado si puede. No conduzca por más de 2 a 3 horas.</p>
+<p>Permanezca en su condado si puede. No conduzca por más de 2 a 3 horas. El Departamento de Salud Pública de California emitió unos <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Travel-Advisory.aspx">consejos de viaje</a> que animan a los californianos a evitar viajes no esenciales.</p>
 <p>Puede viajar por asuntos urgentes o si dicho viaje es esencial para su trabajo permitido. A pesar de que se están abriendo las empresas de todo el estado, evite viajar largas distancias por vacaciones o placer en la medida de lo posible. Esto es para frenar la propagación del coronavirus. No viaje si está enfermo o si alguien de su casa ha tenido coronavirus en las últimas dos semanas. No viaje con alguien que esté enfermo. </p>
 <p>Debe consultar al departamento de salud local desde donde está comenzando, a lo largo de su ruta y de su destino planeado para obtener información. Sepa que las reglas locales están cambiando constantemente y pueden cambiar incluso después de comenzar su viaje. <a href="https://www.visitcalifornia.com/latest-covid-19-coronavirus">Consulte las actualizaciones sobre viajes</a> antes de salir de su casa.</p>
 <p>Antes de viajar fuera de su comunidad, considere estas preguntas de la guía para viajes del <a href="https://www.cdc.gov/coronavirus/2019-ncov/travelers/travel-in-the-us.html">Centro para el Control de Enfermedades (Center for Disease Control, CDC)</a>:</p>
 <ul><li>¿Se está propagando el coronavirus en el lugar a donde se dirige?</li><li>¿Son usted o aquellos con los que viaja más propensos a enfermarse gravemente por el coronavirus?</li><li>¿Podrá mantener una distancia física de seis pies de los demás durante o después de su viaje?</li></ul>
 <div><!-- wedding, travel, gathering, tourism, funeral, motel, vacation, airbnb, vrbo, rental home --></div>
-<p>Si de todos modos viaja, tome medidas para mantener a todos a salvo, como usar una cubierta facial, mantenerse a una distancia física de seis pies de las personas que no vivan en su hogar y lavarse las manos con frecuencia.  </p>
+<p>Si sí viaja fuera del estado, cuando regrese debe ponerse en cuarentena durante 14 días después de la llegada. También debe limitar sus interacciones a su hogar inmediato. Esta recomendación no se aplica si usted cruza las fronteras estatales o nacionales para viajes esenciales. </p>
 
       </div>
     </div>
@@ -1065,7 +1065,7 @@
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
       <div class="card-body">
-<p>Para evitar una mayor propagación de la COVID-19, los californianos no deben viajar distancias significativas y deben permanecer cerca de casa en la medida de lo posible.</p>
+<p>Para evitar una mayor propagación de la COVID-19, los californianos no deben viajar distancias significativas y deben permanecer cerca de casa en la medida de lo posible. Consulte los <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Travel-Advisory.aspx">consejos sobre viajes</a> del Departamento de Salud Pública de California para obtener más información.</p>
 <p>Permanezca en su condado si puede. No conduzca por más de 2 a 3 horas.</p>
 
       </div>
@@ -1088,18 +1088,38 @@
   <div class="card">
     <button class="card-header accordion-alpha" type="button" aria-expanded="false">
       <div class="accordion-title">
-<h4>¿Existen restricciones para viajar dentro o fuera de California?</h4>
+<h4>¿Existen restricciones para viajar hacia o fuera de California?</h4>
       </div>
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
       <div class="card-body">
-<p>Actualmente, no existen restricciones para entrar a California si usted viene de otro estado de los Estados Unidos. El gobierno federal ha impuesto restricciones a ciertos viajeros internacionales. Con excepciones específicas, los ciudadanos extranjeros que visitaron ciertos países durante los últimos 14 días tienen prohibido entrar a los Estados Unidos. Todos los viajeros deben tomar precauciones de seguridad cuando consideren viajar:</p>
-<ul><li>No viaje si ha estado enfermo en los últimos 14 días o si vive con alguien que tenga COVID-19.</li><li>No viaje con alguien que esté enfermo.</li><li>Use mascarilla en público.</li><li>Lávese las manos.</li><li>Manténgase a seis pies de cualquier persona con la que no viva.</li></ul>
+<p>Actualmente no existen restricciones para ingresar a California si viene de otro estado de los EE. UU., pero California, junto con Washington y Oregon, emitieron unos <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Travel-Advisory.aspx">consejos sobre viajes para viajes no esenciales</a>. </p>
+<p>Si usted llega a California desde otros estados o países, incluidos los residentes de California que regresan, debe ponerse en cuarentena durante 14 días después de la llegada. También debe limitar sus interacciones a su hogar inmediato. Esta recomendación no se aplica si usted cruza las fronteras estatales o nacionales para viajes esenciales. </p>
+<p>Se anima a los californianos a que permanezcan en casa o en su región y evitar los viajes no esenciales a otros estados o países. Evitar viajar puede reducir el riesgo de transmisión del virus y traer el virus en su regreso a California.</p>
+<p>El gobierno federal ha impuesto restricciones a ciertos viajeros internacionales. Con excepciones específicas, los ciudadanos extranjeros que visitaron ciertos países durante los últimos 14 días tienen prohibido entrar a los Estados Unidos. Todos los viajeros deben tomar precauciones de seguridad cuando consideren viajar:</p>
+<ul><li>No viaje si ha estado enfermo en los últimos 14 días o si vive con alguien que tenga COVID-19.</li><li>No viaje con alguien que esté enfermo.</li><li>Use mascarilla en público.</li><li>Lávese las manos.</li><li>Use mascarilla y manténgase a seis pies de cualquier persona con la que no viva.</li></ul>
+<p>Para obtener más información, consulte los <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Travel-Advisory.aspx">consejos sobre viajes</a> del Departamento de Salud Pública de California.</p>
 
       </div>
     </div>
   </div>
 </cwds-accordion>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
