--- a/ko/industry-guidance/index.html
+++ b/ko/industry-guidance/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>위험 감소를 위한 업계 지침</h1>
           
-            <p class="small-text">Last updated&nbsp;2020년 11월 16일 오후 4:09</p>
+            <p class="small-text">Last updated&nbsp;2020년 11월 24일 오후 7:23</p>
           
         </div>
       </div>
@@ -1766,11 +1766,11 @@
 <p>최소(노란색)</p>
 <ul><li>일반 대중 식당: <ul><li>변경 조치 이행 후 실내 운영 개시</li><li>수용 가능 인원의 50%로 제한</li></ul></li><li>와이너리:<ul><li>변경 조치 이행 후 실내 운영 개시</li><li>수용 가능 인원은 반드시 50% 또는 200명 중 적은 인원수로 제한</li></ul></li><li>술집, 양조장 및 증류주 양조장: <ul><li>변경 조치 이행 후 실내 운영 개시</li><li>수용 가능 인원의 50%로 제한</li></ul></li></ul>
 <p>포장 음식 제공 식당</p>
-<ul><li>본 <a href="https://files.covid19.ca.gov/pdf/guidance-take-out-restaurants--en.pdf">포장 음식, 드라이브 스루 및 배달 제공 음식점에 관한 지침</a>을 준수하여 근로자와 고객에게 더 안전한 환경을 조성하십시오. </li><li>지침을 검토하여 고객과 직원들에게 귀하의 사업장이 감염 위험을 줄이는 작업을 완료했으며 사업을 재개했음을 알릴 수 있는 작업장 계획을 준비하십시오.</li></ul>
+<ul><li>본 <a href="https://files.covid19.ca.gov/pdf/guidance-take-out-restaurants--en.pdf">포장 음식, 드라이브 스루 및 배달 제공 음식점에 관한 지침</a>을 준수하여 근로자와 고객에게 더 안전한 환경을 조성하십시오.</li><li>지침을 검토하여 고객과 직원들에게 귀하의 사업장이 감염 위험을 줄이는 작업을 완료했으며 사업을 재개했음을 알릴 수 있는 작업장 계획을 준비하십시오.</li></ul>
 <p>실외 식사</p>
 <ul><li>본 <a href="https://files.covid19.ca.gov/pdf/guidance-outdoor-restaurants--en.pdf">실외 식사, 포장 음식, 드라이브 스루 및 배달 제공 음식점에 관한 지침</a>을 준수하여 근로자와 고객에게 더 안전한 환경을 조성하십시오.</li><li>지침을 검토하여 고객과 직원들에게 귀하의 사업장이 감염 위험을 줄이는 작업을 완료했으며 사업을 재개했음을 알릴 수 있는 작업장 계획을 준비하십시오.</li></ul>
 <p>음식점, 와이너리 및 술집</p>
-<ul><li>본 <a href="https://files.covid19.ca.gov/pdf/guidance-restaurants-bars-wineries--ko.pdf">음식점, 와이너리 및 술집에 관한 지침</a>을 준수하여 근로자와 고객에게 더 안전한 환경을 조성하십시오.</li><li>지침을 검토하여 계획을 준비하고 <a href="https://files.covid19.ca.gov/pdf/checklist-restaurants-bars--ko.pdf">일반 대중 음식점, 와이너리 및 술집을 위한 체크리스트</a>를 사업장에 게재하여 고객과 직원들에게 귀하의 사업장이 감염 위험을 줄이는 작업을 완료했으며 사업을 재개했음을 알리십시오. </li></ul>
+<ul><li>본 <a href="https://files.covid19.ca.gov/pdf/guidance-restaurants-bars-wineries--ko.pdf">음식점, 와이너리 및 술집에 관한 지침</a>을 준수하여 근로자와 고객에게 더 안전한 환경을 조성하십시오.</li><li>지침을 검토하여 계획을 준비하고 <a href="https://files.covid19.ca.gov/pdf/checklist-restaurants-bars--ko.pdf">일반 대중 음식점, 와이너리 및 술집을 위한 체크리스트</a>를 사업장에 게재하여 고객과 직원들에게 귀하의 사업장이 감염 위험을 줄이는 작업을 완료했으며 사업을 재개했음을 알리십시오.</li></ul>
 <p>일반 대중 음식점</p>
 <ul><li>본 <a href="https://files.covid19.ca.gov/pdf/guidance-dine-in-restaurants--ko.pdf">실내 식사 일반 대중 식당을 위한 지침</a>을 준수하여 근로자와 고객에게 더 안전한 환경을 조성하십시오.</li><li>지침을 검토하여 계획을 준비하고 <a href="https://files.covid19.ca.gov/pdf/checklist-dine-in-restaurants--ko.pdf">일반 대중 음식점을 위한 체크리스트</a>를 사업장에 게시하여 고객과 직원들에게 귀하의 사업장이 감염 위험을 줄이는 작업을 완료했으며 사업을 재개했음을 알리십시오.</li></ul>
 
@@ -2106,7 +2106,7 @@
 
 
 
-    <!-- Ethnio Activation Code --> <script type="text/javascript" language="javascript" src="//ethn.io/22981.js" async="true" defer charset="utf-8"></script>    <p> </p>
+    <!-- Ethnio Activation Code --> <script type="text/javascript" language="javascript" src="//ethn.io/22981.js" async="true" defer="" charset="utf-8"></script>    <p> </p>
 </div>
     </div>
   </div>
