--- a/ko/stay-home-except-for-essential-needs/index.html
+++ b/ko/stay-home-except-for-essential-needs/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>COVID-19 제한 조치 관련 사항</h1>
           
-            <p class="small-text">Last updated&nbsp;2020년 11월 23일 오후 2:14</p>
+            <p class="small-text">Last updated&nbsp;2020년 11월 25일 오후 12:47</p>
           
         </div>
       </div>
@@ -1012,13 +1012,13 @@
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
       <div class="card-body">
-<p>가능하면 본인의 카운티에 머무르십시오. 2-3시간 이상 운전하지 마십시오.</p>
-<p>긴급한 목적이나 해당 여행이 허가받은 업무에 필수적인 경우 여행할 수 있습니다. 주 전역에 걸쳐 사업체 운영이 개시되고 있으나 최대한 휴가 또는 관광 목적의 장거리 여행은 피하십시오. 코로나바이러스의 확산을 늦추는 것이 그 목적입니다. 아프거나 지난 2주 동안 여러분 세대원 중 누군가가 코로나바이러스에 걸렸다면 여행을 삼가하십시오. 아픈 사람과 함께 여행하지 마십시오. </p>
+<p>가능하면 본인의 카운티에 머무르십시오. 2-3시간 이상 운전하지 마십시오. 캘리포니아 공중보건부는 캘리포니아 주민들에게 비필수적인 여행을 삼가할 것을 권장하는 <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Travel-Advisory.aspx">여행 주의보</a>를 발표하였습니다.</p>
+<p>긴급 사항이나 해당 여행이 허가된 업무에 필수적인 경우 여행할 수 있습니다. 주 전역에 걸쳐 사업체 운영이 개시되고 있으나 최대한 휴가 또는 관광 목적의 장거리 여행은 피하십시오. 코로나바이러스의 확산을 늦추는 것이 그 목적입니다. 아프거나 지난 2주 동안 여러분 세대원 중 누군가가 코로나바이러스에 걸렸다면 여행을 삼가하십시오. 아픈 사람과 함께 여행하지 마십시오. </p>
 <p>출발지, 여행 경로 및 예정 도착지 정보에 대해 지역 보건부에 확인해야 합니다. 해당 지역 규정은 계속해서 변경되고 있으며 여행을 시작한 이후에도 변경될 수 있습니다. 집에서 출발하기 전에 <a href="https://www.visitcalifornia.com/latest-covid-19-coronavirus">최신 여행 정보를 확인하십시오</a>.</p>
 <p>해당 지역 사회로부터 여행에 나서기 전에 <a href="https://www.cdc.gov/coronavirus/2019-ncov/travelers/travel-in-the-us.html">질병통제센터(Center for Disease Control and Prevention, CDC) 여행 지침서</a>에 나오는 다음 질문을 고려하십시오:</p>
-<ul><li>여행 목적지에서 코로나바이러스가 확산되고 있습니까?</li><li>여러분이나 함께 여행하려는 분들이 코로나바이러스로 심하게 아플 가능성이 더 있습니까?</li><li>여행 도중이나 마친 후 다른 사람으로부터 6 피트의 물리적 거리를 유지할 수 있을 것입니까?</li></ul>
+<ul><li>여행 목적지에서 코로나바이러스가 확산되고 있습니까?</li><li>여러분이나 함께 여행하려는 분들이 코로나바이러스로 심하게 아플 가능성이 더 있습니까?</li><li>여행 도중이나 종료 후 다른 사람으로부터 6 피트의 물리적 거리를 유지할 수 있겠습니까?</li></ul>
 <div><!-- wedding, travel, gathering, tourism, funeral, motel, vacation, airbnb, vrbo, rental home --></div>
-<p>여행할 경우 안면 가리개 착용, 여러분의 세대원이 아닌 사람과 6피트의 물리적 거리 유지 및 자주 손 씻기 등 모든 사람의 안전 유지를 위한 조치를 취하십시오.  </p>
+<p>타주로 여행하는 경우 돌아오면 도착 후 14일 동안 자가 격리를 이행해야 합니다. 또한 만나는 사람은 직계 가족으로 제한해야 합니다. 이번 권고 사항은 필수적인 여행으로 타주나 외국을 방문하는 경우에는 적용되지 않습니다. </p>
 
       </div>
     </div>
@@ -1065,7 +1065,7 @@
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
       <div class="card-body">
-<p>COVID-19의 추가 확산을 방지하기 위해 캘리포니아 주민들은 장거리 이동을 삼가해야 하며 최대한 자택과 가까운 곳에 머물러야 합니다.</p>
+<p>COVID-19의 추가 확산을 방지하기 위해 캘리포니아 주민들은 장거리 이동을 삼가해야 하며 최대한 자택과 가까운 곳에 머물러야 합니다. 더 자세한 사항은 캘리포니아 공중보건부 <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Travel-Advisory.aspx">여행 주의보</a>를 참조하십시오.</p>
 <p>가능하면 본인의 카운티에 머무르십시오. 2-3시간 이상 운전하지 마십시오.</p>
 
       </div>
@@ -1093,13 +1093,33 @@
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
       <div class="card-body">
-<p>미국 내 다른 주에서 오는 경우 현재 캘리포니아 주에 들어오는데 따른 제한 조치는 없습니다. 미국 연방 정부는 특정 해외 여행자에 대한 제한 조치를 취하였습니다. 특정한 경우를 제외하고 지난 14일 동안 특정 국가를 방문한 외국 국적자는 미국으로의 입국이 금지됩니다. 모든 여행자는 여행을 고려할 경우 안전 예방책을 취해야 합니다.</p>
-<ul><li>지난 14일 동안 아팠거나 COVID-19 감염자와 동거하는 경우 여행하지 마십시오.</li><li>아픈 사람과 함께 여행하지 마십시오.</li><li>공공 장소에서 마스크를 착용하십시오</li><li>손을 씻으십시오.</li><li>비동거인과는 6 피트의 거리를 유지하십시오</li></ul>
+<p>현재 미국 내 타주에서 오는 경우 캘리포니아로 들어 오는데는 아무런 제한 조치도 없습니다. 그러나 캘리포니아주는 워싱턴주와 오레건주와 함께 <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Travel-Advisory.aspx">비필수적인 여행에 대한 여행 주의보</a>를 발표하였습니다. </p>
+<p>캘리포니아 주민이 돌아오는 겻을 포함하여 타주나 외국에서 캘리포니아로 도착하는 경우 도착 이후 14일 동안 자가 격리를 이행해야 합니다. 또한 만나는 사람은 직계 가족으로 제한해야 합니다. 이번 권고 사항은 필수적인 여행으로 타주나 외국을 방문하는 경우에는 적용되지 않습니다. </p>
+<p>캘리포니아 주민은 자택이나 해당 지역에 체류하며 타주나 외국으로의 비필수적인 여행을 삼가할 것을 권장합니다. 여행을 삼가하면 바이러스 전파하고 바이러스를 캘리포니아로 다시 들여올 위험성을 줄일 수 있습니다.</p>
+<p>연방 정부는 특정 외국 여행자에 대한 제한 조치를 시행하였습니다. 특정한 경우를 제외하고 지난 14일 동안 특정 국가를 방문한 외국 국적자는 미국으로의 입국이 금지됩니다. 모든 여행자는 여행을 고려할 경우 안전 예방책을 취해야 합니다.</p>
+<ul><li>지난 14일 동안 아팠거나 COVID-19 감염자와 동거하는 경우 여행하지 마십시오.</li><li>아픈 사람과 함께 여행하지 마십시오.</li><li>공공 장소에서 마스크를 착용하십시오</li><li>손을 씻으십시오.</li><li>비동거인이 근처에 있을 경우 6 피트의 거리를 유지하고 마스크를 착용하십시오.</li></ul>
+<p>더 자세한 사항은 캘리포니아 공중보건부 <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Travel-Advisory.aspx">여행 주의보</a>를 참조하십시오.</p>
 
       </div>
     </div>
   </div>
 </cwds-accordion>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
