--- a/tl/get-local-information/index.html
+++ b/tl/get-local-information/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Lokal na impormasyon at mga alerto</h1>
           
-            <p class="small-text">Last updated&nbsp;Nobyembre 5, 2020 sa 9:58 AM</p>
+            <p class="small-text">Last updated&nbsp;Nobyembre 25, 2020 sa 4:00 PM</p>
           
         </div>
       </div>
@@ -175,11 +175,7 @@
 
 
 
-<p>Ang bawat county sa California ay nakatalaga sa isang tier batay sa rate nito ng mga bagong kaso at pagiging positibo. Alamin <a href="/tl/safer-economy/">ang status ng tier ng iyong county</a> para malaman kung aling mga negosyo at aktibidad ang makakapagbukas.</p>    <a class="action-link" href="/tl/sign-up-for-county-alerts/"><span class="ca-gov-icon-warning-circle"></span> Mag-sign up para sa mga alerto ng county</a></p>
-
-
-
-<p>Nagsisikap ang bawat lungsod, county, at lokal na pamahalaan ng California para matugunan ang COVID-19. </p>
+<p>Ang bawat county sa California ay nakatalaga sa isang tier batay sa rate nito ng mga bagong kaso at pagiging positibo. Alamin <a href="/tl/safer-economy/">ang status ng tier ng iyong county</a> para malaman kung aling mga negosyo at aktibidad ang makakapagbukas.</p>    <a class="action-link" href="/tl/sign-up-for-county-alerts/"><span class="ca-gov-icon-warning-circle"></span><strong> Mag-sign up para sa mga alerto ng county</strong></a>    <p>Nagsisikap ang bawat lungsod, county, at lokal na pamahalaan ng California para matugunan ang COVID-19. </p>
 
 
 
