--- a/tl/stay-home-except-for-essential-needs/index.html
+++ b/tl/stay-home-except-for-essential-needs/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Tungkol sa mga paghihigpit para sa COVID-19</h1>
           
-            <p class="small-text">Last updated&nbsp;Nobyembre 23, 2020 sa 2:14 PM</p>
+            <p class="small-text">Last updated&nbsp;Nobyembre 25, 2020 sa 12:47 PM</p>
           
         </div>
       </div>
@@ -1012,13 +1012,13 @@
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
       <div class="card-body">
-<p>Manatili sa iyong county kung puwede. Huwag magmaneho nang mahigit sa 2-3 oras.</p>
+<p>Manatili sa iyong county kung puwede. Huwag magmaneho nang mahigit sa 2-3 oras. Naglabas ang Departamento ng Pampublikong Kalusugan ng California ng <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Travel-Advisory.aspx">Abiso sa Pagbiyahe</a> na nanghihikayat sa mga Californian na umiwas sa hindi kinakailangang pagbiyahe.</p>
 <p>Puwede kang bumiyahe para sa mga bagay na nangangailangan ng agarang atensyon o kung kinakailangan ito sa iyong pinapahintulutang trabaho. Bagama't nagbubukas na ang mga negosyo sa estado, iwasang bumiyahe sa malalayo para magbakasyon o maglibang hangga't posible. Ito ay para mapabagal ang pagkalat ng coronavirus. Huwag bumiyahe kung mayroon kang sakit, o kung may kasama ka sa bahay na nagkaroon ng coronavirus sa nakalipas na dalawang linggo. Huwag bumiyahe nang may kasamang may sakit. </p>
 <p>Dapat mong alamin sa lokal na departamento ng kalusugan kung saan ka magsisimula, kasama ang iyong ruta, at sa iyong planong destinasyon, para sa impormasyon. Tandaang ang mga lokal na tuntunin ay patuloy na nagbabago at posibleng magbago pagkatapos mong simulan ang iyong biyahe. <a href="https://www.visitcalifornia.com/latest-covid-19-coronavirus">Alamin ang mga update sa pagbiyahe</a> bago ka umalis ng bahay.</p>
 <p>Bago bumiyahe palabas ng iyong komunidad, pag-isipan ang mga tanong na ito mula sa <a href="https://www.cdc.gov/coronavirus/2019-ncov/travelers/travel-in-the-us.html">gabay sa pagbiyahe ng Center para sa Pagkontrol at Pag-iwas sa Sakit (Center for Disease Control and Prevention, CDC)</a>:</p>
 <ul><li>Kumakalat ba ang coronavirus sa lugar na pupuntahan mo?</li><li>Malaki ba ang posibilidad na magkaroon ka o ang mga kasama mong bibiyahe ng malalang sakit mula sa coronavirus?</li><li>Magagawa mo bang magpanatili ng 6 na talampakang distansya mula sa ibang tao habang nasa biyahe o pagkatapos ng iyong biyahe?</li></ul>
 <div><!-- wedding, travel, gathering, tourism, funeral, motel, vacation, airbnb, vrbo, rental home --></div>
-<p>Kung bibiyahe ka, magsagawa ng mga hakbang para mapanatiling ligtas ang lahat, gaya ng pagsusuot ng takip sa mukha, pagpapanatili ng 6 na talampakang distansya mula sa mga taong hindi mo kasama sa bahay, at regular na paghuhugas ng iyong mga kamay.  </p>
+<p>Kung bibiyahe ka palabas ng estado, dapat kang mag-quarantine ng sarili, pagkabalik mo, nang 14 na araw sa iyong pagdating. Dapat mo ring limitahan ang iyong mga pakikipag-ugnayan sa iyong mga kasama sa bahay. Hindi nalalapat ang rekomendasyong ito kung tatawid ka sa mga hangganan ng estado o bansa para sa kinakailangang pagbiyahe. </p>
 
       </div>
     </div>
@@ -1065,7 +1065,7 @@
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
       <div class="card-body">
-<p>Para maiwasan ang higit pang pagkalat ng COVID-19, hindi dapat bumiyahe ang mga residente ng California sa malalayong lugar at dapat silang manatili malapit sa kani-kanilang tirahan hangga't posible.</p>
+<p>Para maiwasan ang higit pang pagkalat ng COVID-19, hindi dapat bumiyahe ang mga residente ng California sa malalayong lugar at dapat silang manatili malapit sa kani-kanilang tirahan hangga't posible. Tingnan ang <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Travel-Advisory.aspx">Abiso sa Pagbiyahe</a> ng Departamento ng Pampublikong Kalusugan ng California para sa higit pang impormasyon.</p>
 <p>Manatili sa iyong county kung puwede. Huwag magmaneho nang mahigit sa 2-3 oras.</p>
 
       </div>
@@ -1093,13 +1093,33 @@
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
       <div class="card-body">
-<p>Sa kasalukuyan, walang paghihigpit para sa pagpasok sa California kung galing ka sa ibang estado sa U.S. Nagtalaga ang pederal na pamahalaan ng mga paghihigpit sa ilang nagbibiyahe sa ibang bansa. Alinsunod sa mga partikular na pagbubukod, ang mga foreign national na bumisita sa ilang partikular na bansa sa nakalipas na 14 na araw ay pinagbabawalang pumasok sa Estados Unidos. Ang lahat ng nagbibiyahe ay dapat magsagawa ng mga pangkaligtasang hakbang kapag isinasaalang-alang ang pagbiyahe.</p>
-<ul><li>Huwag bumiyahe kung nagkasakit ka sa nakalipas na 14 araw o kung may kasama ka sa bahay na may COVID-19.</li><li>Huwag bumiyahe nang may kasamang may sakit.</li><li>Magsuot ng mask sa mga pampublikong lugar.</li><li>Hugasan ang iyong mga kamay.</li><li>Magpanatili ng 6 na talampakang layo mula sa sinumang hindi mo kasama sa bahay.</li></ul>
+<p>Sa kasalukuyan, walang paghihigpit para sa pagpasok ng California kung magmumula ka sa iba pang estado sa U.S., pero naglabas ang California, kasama ng Washington at Oregon, ng <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Travel-Advisory.aspx">Abiso sa Pagbiyahe para sa Hindi Kinakailangang Pagbiyahe</a>. </p>
+<p>Dapat ay 14 na araw kang mag-quarantine ng sarili, pati ang mga pabalik na residente ng California, pagdating ninyo sa California mula sa iba pang estado o country. Dapat mo ring limitahan ang iyong mga pakikipag-ugnayan sa iyong mga kasama sa bahay. Hindi nalalapat ang rekomendasyong ito kung tatawid ka sa mga hangganan ng estado o bansa para sa kinakailangang pagbiyahe. </p>
+<p>Hinihikayat ang mga Californian na manatili sa bahay o sa kanilang rehiyon at na umiwas sa hindi kinakailangang pagbiyahe sa iba pang estado o bansa. Kung iiwas ka sa pagbiyahe, mapapaliit ang posibilidad na magkahawahan ng virus at madala ang virus sa California.</p>
+<p>May mga ipinatupad na paghihigpit ang pederal na pamahalaan sa ilang partikular na internasyonal na manlalakbay. Alinsunod sa mga partikular na pagbubukod, ang mga foreign national na bumisita sa ilang partikular na bansa sa nakalipas na 14 na araw ay pinagbabawalang pumasok sa Estados Unidos. Ang lahat ng nagbibiyahe ay dapat magsagawa ng mga pangkaligtasang hakbang kapag isinasaalang-alang ang pagbiyahe.</p>
+<ul><li>Huwag bumiyahe kung nagkasakit ka sa nakalipas na 14 araw o kung may kasama ka sa bahay na may COVID-19.</li><li>Huwag bumiyahe nang may kasamang may sakit.</li><li>Magsuot ng mask sa mga pampublikong lugar.</li><li>Hugasan ang iyong mga kamay.</li><li>Magpanatili ng 6 na talampakang distansya at magsuot ng mask kapag may tao sa paligid mo na hindi mo kasama sa bahay.</li></ul>
+<p>Para sa higit pang impormasyon, basahin ang <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Travel-Advisory.aspx">Abiso sa Pagbiyahe</a> ng Departamento ng Pampublikong Kalusugan ng California.</p>
 
       </div>
     </div>
   </div>
 </cwds-accordion>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
