--- a/vi/get-local-information/index.html
+++ b/vi/get-local-information/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Thông tin và cảnh báo ở địa phương</h1>
           
-            <p class="small-text">Last updated&nbsp;5 tháng 11, 2020 lúc 9:58</p>
+            <p class="small-text">Last updated&nbsp;25 tháng 11, 2020 lúc 16:00</p>
           
         </div>
       </div>
@@ -175,11 +175,7 @@
 
 
 
-<p>Mỗi quận ở California được phân vào một cấp dựa trên tỷ lệ số ca mắc mới và mức độ dương tính với bệnh. Kiểm tra <a href="/vi/safer-economy/">trạng thái cấp của quận quý vị</a> để xem các cơ sở kinh doanh và hoạt động nào có thể mở cửa.</p>    <a class="action-link" href="/vi/sign-up-for-county-alerts/"><span class="ca-gov-icon-warning-circle"></span> Đăng ký nhận thông báo của quận</a></p>
-
-
-
-<p>Chính quyền mỗi thành phố, quận và địa phương ở California hiện đang nỗ lực ứng phó với đại dịch COVID-19. </p>
+<p>Mỗi quận ở California được phân vào một cấp dựa trên tỷ lệ số ca mắc mới và mức độ dương tính với bệnh. Kiểm tra <a href="/vi/safer-economy/">trạng thái cấp của quận quý vị</a> để xem các cơ sở kinh doanh và hoạt động nào có thể mở cửa.</p>    <a class="action-link" href="/vi/sign-up-for-county-alerts/"><span class="ca-gov-icon-warning-circle"></span><strong> Đăng ký nhận thông báo của quận</strong></a>    <p>Chính quyền mỗi thành phố, quận và địa phương ở California hiện đang nỗ lực ứng phó với đại dịch COVID-19. </p>
 
 
 
