--- a/vi/industry-guidance/index.html
+++ b/vi/industry-guidance/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Hướng dẫn dành cho từng ngành nghề để giảm nhẹ rủi ro</h1>
           
-            <p class="small-text">Last updated&nbsp;16 tháng 11, 2020 lúc 16:09</p>
+            <p class="small-text">Last updated&nbsp;24 tháng 11, 2020 lúc 19:23</p>
           
         </div>
       </div>
@@ -1766,11 +1766,11 @@
 <p>Tối thiểu (màu vàng)</p>
 <ul><li>Các nhà hàng: <ul><li>Trong nhà với điều chỉnh sửa đổi</li><li>Công suất giới hạn ở 50%</li></ul></li><li>Nhà máy rượu:<ul><li>Trong nhà với điều chỉnh sửa đổi</li><li>Phải giới hạn sức chứa ở 50% hoặc 200 người, tùy theo số lượng nào ít hơn</li></ul></li><li>Quán bar, nhà máy bia và nhà máy chưng cất: <ul><li>Trong nhà với điều chỉnh sửa đổi</li><li>Công suất giới hạn ở 50%</li></ul></li></ul>
 <p>Nhà hàng cung cấp dịch vụ mua mang đi</p>
-<ul><li>Tuân thủ <a href="https://files.covid19.ca.gov/pdf/guidance-take-out-restaurants--en.pdf">hướng dẫn này dành cho các nhà hàng cung cấp dịch vụ mua mang đi, mua hàng trên xe và giao hàng</a> để tạo ra môi trường an toàn hơn cho người lao động và khách hàng. </li><li>Xem xét hướng dẫn và lập kế hoạch cho cơ sở làm việc của quý vị để khách hàng và nhân viên thấy quý vị đã giảm thiểu được nguy cơ và sẵn sàng mở cửa kinh doanh trở lại.</li></ul>
+<ul><li>Tuân thủ <a href="https://files.covid19.ca.gov/pdf/guidance-take-out-restaurants--en.pdf">hướng dẫn này dành cho các nhà hàng cung cấp dịch vụ mua mang đi, mua hàng trên xe và giao hàng</a> để tạo ra môi trường an toàn hơn cho người lao động và khách hàng.</li><li>Xem xét hướng dẫn và lập kế hoạch cho cơ sở làm việc của quý vị để khách hàng và nhân viên thấy quý vị đã giảm thiểu được nguy cơ và sẵn sàng mở cửa kinh doanh trở lại.</li></ul>
 <p>Ăn uống ngoài trời</p>
 <ul><li>Tuân thủ <a href="https://files.covid19.ca.gov/pdf/guidance-outdoor-restaurants--en.pdf">hướng dẫn này dành cho các nhà hàng cung cấp dịch vụ ăn uống ngoài trời, mua mang đi, mua hàng trên xe và giao hàng</a> để tạo ra môi trường an toàn hơn cho người lao động và khách hàng.</li><li>Xem xét hướng dẫn và lập kế hoạch cho cơ sở làm việc của quý vị để khách hàng và nhân viên thấy quý vị đã giảm thiểu được nguy cơ và sẵn sàng mở cửa kinh doanh trở lại.</li></ul>
 <p>Nhà hàng, quán rượu và quán bar</p>
-<ul><li>Tuân thủ <a href="https://files.covid19.ca.gov/pdf/guidance-restaurants-bars-wineries--vi.pdf">hướng dẫn này dành cho các nhà hàng, quán rượu và quán bar</a> để tạo ra môi trường an toàn hơn cho người lao động và khách hàng.</li><li>Xem xét hướng dẫn, lập kế hoạch và đăng tải <a href="https://files.covid19.ca.gov/pdf/checklist-restaurants-bars--vi.pdf">danh mục kiểm tra dành cho các nhà hàng, quán rượu và quán bar</a> tại cơ sở làm việc của quý vị để cho khách hàng và nhân viên thấy quý vị đã giảm thiểu được nguy cơ và sẽ mở cửa kinh doanh trở lại. </li></ul>
+<ul><li>Tuân thủ <a href="https://files.covid19.ca.gov/pdf/guidance-restaurants-bars-wineries--vi.pdf">hướng dẫn này dành cho các nhà hàng, quán rượu và quán bar</a> để tạo ra môi trường an toàn hơn cho người lao động và khách hàng.</li><li>Xem xét hướng dẫn, lập kế hoạch và đăng tải <a href="https://files.covid19.ca.gov/pdf/checklist-restaurants-bars--vi.pdf">danh mục kiểm tra dành cho các nhà hàng, quán rượu và quán bar</a> tại cơ sở làm việc của quý vị để cho khách hàng và nhân viên thấy quý vị đã giảm thiểu được nguy cơ và sẽ mở cửa kinh doanh trở lại.</li></ul>
 <p>Nhà hàng ăn uống tại chỗ</p>
 <ul><li>Tuân thủ <a href="https://files.covid19.ca.gov/pdf/guidance-dine-in-restaurants--vi.pdf">hướng dẫn này dành cho các nhà hàng ăn uống tại chỗ</a> nhằm tạo ra môi trường an toàn hơn cho người lao động và khách hàng.</li><li>Xem xét hướng dẫn, lập kế hoạch và đăng tải <a href="https://files.covid19.ca.gov/pdf/checklist-dine-in-restaurants--vi.pdf">danh mục kiểm tra dành cho các nhà hàng ăn uống tại chỗ </a> tại cơ sở làm việc của quý vị để cho khách hàng và nhân viên thấy quý vị đã giảm được nguy cơ và mở cửa kinh doanh trở lại.</li></ul>
 
@@ -2106,7 +2106,7 @@
 
 
 
-    <!-- Ethnio Activation Code --> <script type="text/javascript" language="javascript" src="//ethn.io/22981.js" async="true" defer charset="utf-8"></script>    <p> </p>
+    <!-- Ethnio Activation Code --> <script type="text/javascript" language="javascript" src="//ethn.io/22981.js" async="true" defer="" charset="utf-8"></script>    <p> </p>
 </div>
     </div>
   </div>
