--- a/zh-hans/industry-guidance/index.html
+++ b/zh-hans/industry-guidance/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>有助于降低风险的行业指引</h1>
           
-            <p class="small-text">Last updated&nbsp;2020年11月16日, 下午4:09</p>
+            <p class="small-text">Last updated&nbsp;2020年11月24日, 下午7:23</p>
           
         </div>
       </div>
@@ -1766,11 +1766,11 @@
 <p>最小（黄色）</p>
 <ul><li>餐厅：<ul><li>经调整后在室内开放</li><li>容纳量必须限制在50%</li></ul></li><li>酒庄：<ul><li>经调整后在室内开放</li><li>容纳率必须限制在50%或200人，以人数较少者为准</li></ul></li><li>酒吧、啤酒厂和酿酒厂： <ul><li>经调整后在室内开放</li><li>容纳率必须限制在50%</li></ul></li></ul>
 <p>外卖餐厅</p>
-<ul><li>请遵循此<a href="https://files.covid19.ca.gov/pdf/guidance-take-out-restaurants--en.pdf">外卖餐厅、免下车餐厅和外送餐厅指引</a>，为员工和顾客创造更加安全的环境。 </li><li>查看该指引，并为工作场所制定计划，向顾客和员工表明风险已降低并重新开展业务。</li></ul>
+<ul><li>请遵循此<a href="https://files.covid19.ca.gov/pdf/guidance-take-out-restaurants--en.pdf">外卖餐厅、免下车餐厅和外送餐厅指引</a>，为员工和顾客创造更加安全的环境。</li><li>查看该指引，并为工作场所制定计划，向顾客和员工表明风险已降低并重新开展业务。</li></ul>
 <p>户外餐厅</p>
 <ul><li>请遵循此<a href="https://files.covid19.ca.gov/pdf/guidance-outdoor-restaurants--en.pdf">户外餐厅、外卖餐厅、免下车餐厅和外送餐厅指引</a>，为员工和顾客创造更加安全的环境。</li><li>查看该指引，并为工作场所制定计划，向顾客和员工表明风险已降低并重新开展业务。</li></ul>
 <p>餐厅、酒庄和酒吧</p>
-<ul><li>请遵循此<a href="https://files.covid19.ca.gov/pdf/guidance-restaurants-bars-wineries--zh-hans.pdf">餐厅、酒庄和酒吧指引</a>，为员工和顾客创造更加安全的环境。</li><li>查看该指引，制定计划，并在工作场所发布<a href="https://files.covid19.ca.gov/pdf/checklist-restaurants-bars--zh-hans.pdf">餐厅、酒庄和酒吧清单</a>，向客户和员工表明风险已降低并重新开展业务。 </li></ul>
+<ul><li>请遵循此<a href="https://files.covid19.ca.gov/pdf/guidance-restaurants-bars-wineries--zh-hans.pdf">餐厅、酒庄和酒吧指引</a>，为员工和顾客创造更加安全的环境。</li><li>查看该指引，制定计划，并在工作场所发布<a href="https://files.covid19.ca.gov/pdf/checklist-restaurants-bars--zh-hans.pdf">餐厅、酒庄和酒吧清单</a>，向客户和员工表明风险已降低并重新开展业务。</li></ul>
 <p>堂食餐厅</p>
 <ul><li>遵循此<a href="https://files.covid19.ca.gov/pdf/guidance-dine-in-restaurants--zh-hans.pdf">堂食餐厅指引</a>，为员工和客户创造更加安全的环境。</li><li>查看该指引，制定计划，并在工作场所发布<a href="https://files.covid19.ca.gov/pdf/checklist-dine-in-restaurants--zh-hans.pdf">堂食餐厅清单</a>，向客户和员工表明风险已降低并重新开展业务。</li></ul>
 
@@ -2106,7 +2106,7 @@
 
 
 
-    <!-- Ethnio Activation Code --> <script type="text/javascript" language="javascript" src="//ethn.io/22981.js" async="true" defer charset="utf-8"></script>    <p> </p>
+    <!-- Ethnio Activation Code --> <script type="text/javascript" language="javascript" src="//ethn.io/22981.js" async="true" defer="" charset="utf-8"></script>    <p> </p>
 </div>
     </div>
   </div>
