--- a/zh-hans/stay-home-except-for-essential-needs/index.html
+++ b/zh-hans/stay-home-except-for-essential-needs/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>关于COVID-19限制</h1>
           
-            <p class="small-text">Last updated&nbsp;2020年11月23日, 下午2:14</p>
+            <p class="small-text">Last updated&nbsp;2020年11月25日, 下午12:47</p>
           
         </div>
       </div>
@@ -1012,13 +1012,13 @@
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
       <div class="card-body">
-<p>请尽量留在您所在的县内。开车时间请勿超过2至3小时。</p>
+<p>请尽量留在您所在的县内。开车时间请勿超过2至3小时。加州公共卫生局已发布<a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Travel-Advisory.aspx">出行建议</a>，鼓励加州民众避免非必要的出行。</p>
 <p>您可以因紧急事件而出行，或者此类出行对于您的特许工作而言有必要性。即使州内的商业正在开放，也请尽量避免因度假或娱乐而出远门。此举是为了减缓新型冠状病毒的传播。如果您生病了，或在过去两周里您的家人感染了新型冠状病毒，请勿出行。请勿与生病的人一同出行。 </p>
 <p>您应咨询出发地、途经地点以及原定目的地的当地卫生局，以了解相关信息。请知悉，地方规则会不断变更，甚至可能会在您开始出行之后变更。请在外出前<a href="https://www.visitcalifornia.com/latest-covid-19-coronavirus">查看出行快讯</a>。</p>
 <p>在离开您的社区出行之前，请考虑到<a href="https://www.cdc.gov/coronavirus/2019-ncov/travelers/travel-in-the-us.html">美国疾病控制中心 (Center for Disease Control, CDC) 出行指引</a>中提出的以下问题：</p>
 <ul><li>新型冠状病毒是否在您出行的地方传播？</li><li>是否您或与您一同出行的人更有可能因为冠状病毒而变得病重？</li><li>在您出行期间或出行之后，您能否与他人保持6英尺的身体距离？</li></ul>
 <div><!-- wedding, travel, gathering, tourism, funeral, motel, vacation, airbnb, vrbo, rental home --></div>
-<p>如果您要出行，请采取相关措施以保护所有人的安全，例如佩戴面罩、与非同住人士保持6英尺的身体距离，以及经常洗手。  </p>
+<p>如果您在州外旅游，当您返程时，应在抵达后进行14天的自我隔离。您亦应减少与直系家庭成员的接触。如果您因必要旅行而穿越州或国家边界，则此建议并不适用。 </p>
 
       </div>
     </div>
@@ -1065,7 +1065,7 @@
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
       <div class="card-body">
-<p>为了防止新型冠状病毒进一步传播，加州民众不应长途旅游，而应尽量待在家附近。</p>
+<p>为了防止新型冠状病毒进一步传播，加州民众不应长途旅游，而应尽量待在家附近。请参阅加州公共卫生局发布的<a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Travel-Advisory.aspx">出行建议</a>，以了解更多信息。</p>
 <p>请尽量留在您所在的县内。开车时间请勿超过2至3小时。</p>
 
       </div>
@@ -1093,13 +1093,33 @@
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
       <div class="card-body">
-<p>如果您来自美国的其他州，目前进入加州没有任何限制。联邦政府已对某些国际旅游者进行了限制。除特殊情况外，在过去14天内到过某些国家的外籍人士禁止进入美国。所有旅游者在考虑出门旅游时都应采取安全防范措施。</p>
-<ul><li>如果您在过去14天内生过病，或者您与新型冠状病毒感染者住在一起，则请勿出门旅游。</li><li>请勿与生病的人一同出行。</li><li>在公共场所佩戴口罩。</li><li>洗手。</li><li>与非同住人士保持6英尺的距离。</li></ul>
+<p>如果您来自美国其他州，则目前进入加州没有限制，但加州、Washington及Oregon州已发布<a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Travel-Advisory.aspx">针对非必要旅行的出行建议</a>。 </p>
+<p>如果您从其他州或国家抵达加州（包括返程的加州居民），则应在抵达后进行14天的自我隔离。您亦应减少与直系家庭成员的接触。如果您因必要旅行而穿越州或国家边界，则此建议并不适用。 </p>
+<p>鼓励加州民众留在家中或所在地区，并避免在非必要的情况下到其他州或国家旅行。避免旅行可以降低病毒传播以及将病毒带回加州的风险。</p>
+<p>联邦政府对部分国际旅客进行了限制。除特殊情况外，在过去14天内到过某些国家的外籍人士禁止进入美国。所有旅游者在考虑出门旅游时都应采取安全防范措施。</p>
+<ul><li>如果您在过去14天内生过病，或者您与新型冠状病毒感染者住在一起，则请勿出门旅游。</li><li>请勿与生病的人一同出行。</li><li>在公共场所佩戴口罩。</li><li>洗手。</li><li>与非同住人士保持6英尺的距离并佩戴口罩。</li></ul>
+<p>请查阅加州公共卫生局发布的<a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Travel-Advisory.aspx">出行建议</a>，以了解更多信息。</p>
 
       </div>
     </div>
   </div>
 </cwds-accordion>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
