--- a/zh-hant/industry-guidance/index.html
+++ b/zh-hant/industry-guidance/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>有助於降低風險的行業指引</h1>
           
-            <p class="small-text">Last updated&nbsp;2020年11月16日, 下午4:09</p>
+            <p class="small-text">Last updated&nbsp;2020年11月24日, 下午7:23</p>
           
         </div>
       </div>
@@ -1766,11 +1766,11 @@
 <p>最小（黃色）</p>
 <ul><li>餐廳：<ul><li>經調整後在室內開放</li><li>容納率必須限制在50%</li></ul></li><li>酒莊：<ul><li>經調整後在室內開放</li><li>容納率必須限制在50%或200人，以人數較少者為準</li></ul></li><li>酒吧、啤酒廠和釀酒廠：<ul><li>經調整後在室內開放</li><li>容納率必須限制在50%</li></ul></li></ul>
 <p>外賣餐廳</p>
-<ul><li>請遵循此<a href="https://files.covid19.ca.gov/pdf/guidance-take-out-restaurants--en.pdf">外賣餐廳、免下車餐廳和外送餐廳指引</a>，為員工和顧客創造更加安全的環境。 </li><li>查看指引，制定您的工作場所計劃，向顧客和員工表明風險已降低並開始營業。</li></ul>
+<ul><li>請遵循此<a href="https://files.covid19.ca.gov/pdf/guidance-take-out-restaurants--en.pdf">外賣餐廳、免下車餐廳和外送餐廳指引</a>，為員工和顧客創造更加安全的環境。</li><li>查看指引，制定您的工作場所計劃，向顧客和員工表明風險已降低並開始營業。</li></ul>
 <p>戶外餐廳</p>
 <ul><li>請遵循此<a href="https://files.covid19.ca.gov/pdf/guidance-outdoor-restaurants--en.pdf">戶外餐廳、外賣餐廳、免下車餐廳和外送餐廳指引</a>，為員工和顧客創造更加安全的環境。</li><li>查看指引，制定您的工作場所計劃，向顧客和員工表明風險已降低並開始營業。</li></ul>
 <p>飯店、酒莊和酒吧</p>
-<ul><li>請遵循此<a href="https://files.covid19.ca.gov/pdf/guidance-restaurants-bars-wineries--zh-hant.pdf">飯店、酒莊和酒吧指引</a>，為工作人員和顧客創造更加安全的環境。</li><li>查看指引，制定計劃，並在您的工作場所張貼<a href="https://files.covid19.ca.gov/pdf/checklist-restaurants-bars--zh-hant.pdf">飯店、酒莊和酒吧清單</a>，向顧客和員工表明風險已降低並開始營業。 </li></ul>
+<ul><li>請遵循此<a href="https://files.covid19.ca.gov/pdf/guidance-restaurants-bars-wineries--zh-hant.pdf">飯店、酒莊和酒吧指引</a>，為工作人員和顧客創造更加安全的環境。</li><li>查看指引，制定計劃，並在您的工作場所張貼<a href="https://files.covid19.ca.gov/pdf/checklist-restaurants-bars--zh-hant.pdf">飯店、酒莊和酒吧清單</a>，向顧客和員工表明風險已降低並開始營業。</li></ul>
 <p>堂食餐廳</p>
 <ul><li>遵循此 <a href="https://files.covid19.ca.gov/pdf/guidance-dine-in-restaurants--zh-hant.pdf">堂食餐廳指引</a> ，為員工及顧客創造更安全的環境。</li><li>查看指引，制定計劃，並在您的工作場所張貼<a href="https://files.covid19.ca.gov/pdf/checklist-dine-in-restaurants--zh-hant.pdf">堂食餐廳清單</a>，向顧客和員工表明風險已降低並開始營業。</li></ul>
 
@@ -2106,7 +2106,7 @@
 
 
 
-    <!-- Ethnio Activation Code --> <script type="text/javascript" language="javascript" src="//ethn.io/22981.js" async="true" defer charset="utf-8"></script>    <p> </p>
+    <!-- Ethnio Activation Code --> <script type="text/javascript" language="javascript" src="//ethn.io/22981.js" async="true" defer="" charset="utf-8"></script>    <p> </p>
 </div>
     </div>
   </div>
