--- a/zh-hant/stay-home-except-for-essential-needs/index.html
+++ b/zh-hant/stay-home-except-for-essential-needs/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>關於COVID-19限制</h1>
           
-            <p class="small-text">Last updated&nbsp;2020年11月23日, 下午2:14</p>
+            <p class="small-text">Last updated&nbsp;2020年11月25日, 下午12:47</p>
           
         </div>
       </div>
@@ -1012,13 +1012,13 @@
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
       <div class="card-body">
-<p>請盡量留在您所在的縣內。開車時間請勿超過2至3小時。</p>
+<p>請盡量留在您所在的縣內。開車時間請勿超過2至3小時。加州公共衛生局已發佈<a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Travel-Advisory.aspx">出行建議</a>，鼓勵加州民眾避免非必要的出行。</p>
 <p>若有緊急事件，或旅行對您的特許工作而言實屬必要，則您可以旅行。儘管全州商業正在逐漸開放，民眾還是應盡量避免因度假或玩樂而長途旅行。此舉旨在減緩冠狀病毒的傳播速度。若您生病，或您家裡人在過去兩週內感染上冠狀病毒，則切勿出行。切勿與生病之人一同出行。 </p>
 <p>您應該諮詢出發地、途中以及計劃目的地的當地衛生部門，以獲取資訊。請注意，當地規定會經常變化，甚至在您開始出行後也可能會發生變化。離家出發之前，請<a href="https://www.visitcalifornia.com/latest-covid-19-coronavirus">查看出行快訊</a>。</p>
 <p>在離開您的社區去旅遊之前，請考慮到<a href="https://www.cdc.gov/coronavirus/2019-ncov/travelers/travel-in-the-us.html">美國疾病控制中心 (Centers for Disease Control, CDC) 旅遊指引</a>中所列的以下問題：</p>
 <ul><li>新型冠狀病毒是否有在您旅遊的地方傳播?</li><li>您自己或者和您一起旅遊的人是否更可能因感染新型冠狀病毒而患很嚴重疾病?</li><li>在旅遊期間或旅遊後，您能否與他人保持6英尺的身體距離？</li></ul>
 <div><!-- wedding, travel, gathering, tourism, funeral, motel, vacation, airbnb, vrbo, rental home --></div>
-<p>如果您要出行，請採取措施以保證每個人的安全，例如佩戴面罩、與非同住人士保持6英尺的身體距離，以及經常洗手。  </p>
+<p>如果您在州外旅遊，當您返程時，應在抵達後進行14天的自我隔離。您亦應減少與直系家庭成員的接觸。如果您因必要旅行而穿越州或國家邊界，則此建議並不適用。 </p>
 
       </div>
     </div>
@@ -1065,7 +1065,7 @@
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
       <div class="card-body">
-<p>為了防止新型冠狀病毒進一步傳播，加州民眾不應長途旅遊，而應盡量待在家附近。</p>
+<p>為了防止新型冠狀病毒進一步傳播，加州民眾不應長途旅遊，而應盡量待在家附近。請參閱加州公共衛生局發佈的<a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Travel-Advisory.aspx">出行建議</a>，以了解更多資訊。</p>
 <p>請盡量留在您所在的縣內。開車時間請勿超過2至3小時。</p>
 
       </div>
@@ -1093,13 +1093,33 @@
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
       <div class="card-body">
-<p>如果您來自美國的其他州，目前進入加州沒有任何限制。聯邦政府已對某些國際旅遊者進行了限制。除特殊情況外，在過去14天內造訪過某些國家的外籍人士禁止進入美國。所有旅遊者在考慮出門旅遊時都應採取安全防範措施。</p>
-<ul><li>如果您在過去14天內生過病，或者您與新型冠狀病毒感染者住在一起，則請勿出門旅遊。</li><li>切勿與生病之人一同出行。</li><li>在公共場所佩戴口罩。</li><li>洗手。</li><li>與非同住人士保持6英尺的距離。</li></ul>
+<p>如果您來自美國其他州，則目前進入加州沒有限制，但加州、Washington及Oregon州已發佈<a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Travel-Advisory.aspx">針對非必要旅行的出行建議</a>。 </p>
+<p>如果您從其他州或國家抵達加州（包括返程的加州居民），則應在抵達後進行14天的自我隔離。您亦應減少與直系家庭成員的接觸。如果您因必要旅行而穿越州或國家邊界，則此建議並不適用。 </p>
+<p>鼓勵加州民眾留在家中或所在地區，並避免在非必要的情況下到其他州或國家旅行。避免旅行可以降低病毒傳播以及將病毒帶回加州的風險。</p>
+<p>聯邦政府對部分國際旅客進行了限制。除特殊情況外，在過去14天內造訪過某些國家的外籍人士禁止進入美國。所有旅遊者在考慮出門旅遊時都應採取安全防範措施。</p>
+<ul><li>如果您在過去14天內生過病，或者您與新型冠狀病毒感染者住在一起，則請勿出門旅遊。</li><li>切勿與生病之人一同出行。</li><li>在公共場所佩戴口罩。</li><li>洗手。</li><li>與非同住人士保持6英尺的距離並佩戴口罩。</li></ul>
+<p>請查閱加州公共衛生局發佈的<a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Travel-Advisory.aspx">出行建議</a>，以了解更多資訊。</p>
 
       </div>
     </div>
   </div>
 </cwds-accordion>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
