--- a/ar/get-local-information/index.html
+++ b/ar/get-local-information/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>المعلومات والتنبيهات المحلية</h1>
           
-            <p class="small-text">Last updated&nbsp;9:58 ص الساعة 5 نوفمبر 2020</p>
+            <p class="small-text">Last updated&nbsp;4:00 م الساعة 25 نوفمبر 2020</p>
           
         </div>
       </div>
@@ -175,11 +175,7 @@
 
 
 
-<p>يتم إحالة كل مقاطعة في كاليفورنيا إلى فئة ما بناءً على معدل الحالات الجديدة ومعدل الإصابات الإيجابية. تحقق من <a href="/ar/safer-economy/">حالة فئة مقاطعتك</a> للتعرف على الشركات والأنشطة التجارية التي يمكن فتحها.</p>    <a class="action-link" href="/ar/sign-up-for-county-alerts/"><span class="ca-gov-icon-warning-circle"></span> الاشتراك في تنبيهات المقاطعة</a></p>
-
-
-
-<p>تعمل كل مدينة ومقاطعة وحكومة محلية في كاليفورنيا على الاستجابة لمرض كوفيد-19. </p>
+<p>يتم إحالة كل مقاطعة في كاليفورنيا إلى فئة ما بناءً على معدل الحالات الجديدة ومعدل الإصابات الإيجابية. تحقق من <a href="/ar/safer-economy/">حالة فئة مقاطعتك</a> للتعرف على الشركات والأنشطة التجارية التي يمكن فتحها.</p>    <a class="action-link" href="/ar/sign-up-for-county-alerts/"><span class="ca-gov-icon-warning-circle"></span><strong> الاشتراك في تنبيهات المقاطعة</strong></a>    <p>تعمل كل مدينة ومقاطعة وحكومة محلية في كاليفورنيا على الاستجابة لمرض كوفيد-19. </p>
 
 
 
