--- a/ar/industry-guidance/index.html
+++ b/ar/industry-guidance/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>التوجيهات الصناعية لخفض المخاطر</h1>
           
-            <p class="small-text">Last updated&nbsp;4:09 م الساعة 16 نوفمبر 2020</p>
+            <p class="small-text">Last updated&nbsp;7:23 م الساعة 24 نوفمبر 2020</p>
           
         </div>
       </div>
@@ -1766,11 +1766,11 @@
 <p>الفئة الأدنى (أصفر)</p>
 <ul><li>المطاعم: <ul><li>الأماكن الداخلية مع إجراء تعديلات</li><li>يجب أن تقتصر السعة على 50٪</li></ul></li><li>الخمارات:<ul><li>الأماكن الداخلية مع إجراء تعديلات</li><li>يجب أن تقتصر السعة على 50٪ أو 200 شخص، أيهما أقل</li></ul></li><li>الحانات ومصانع الجعة ومصانع التقطير: <ul><li>الأماكن الداخلية مع إجراء تعديلات</li><li>يجب أن تقتصر السعة على 50٪</li></ul></li></ul>
 <p>مطاعم الوجبات السريعة</p>
-<ul><li>اتبع هذه <a href="https://files.covid19.ca.gov/pdf/guidance-take-out-restaurants--en.pdf">التوجيهات الخاصة بالمطاعم التي تقدم وجبات سريعة وتعطيك الوجبات دون مغادرة سيارتك وتوفر خدمات التوصيل</a> لتوفير بيئة أكثر أمانًا للموظفين والزبائن. </li><li>استعرض التوجيهات، وقم بإعداد خطة لمكان عملك لكي تبين للعملاء والموظفين أنك قد قللت من المخاطر وأنك جاهز لاستئناف العمل.</li></ul>
+<ul><li>اتبع هذه <a href="https://files.covid19.ca.gov/pdf/guidance-take-out-restaurants--en.pdf">التوجيهات الخاصة بالمطاعم التي تقدم وجبات سريعة وتعطيك الوجبات دون مغادرة سيارتك وتوفر خدمات التوصيل</a> لتوفير بيئة أكثر أمانًا للموظفين والزبائن.</li><li>استعرض التوجيهات، وقم بإعداد خطة لمكان عملك لكي تبين للعملاء والموظفين أنك قد قللت من المخاطر وأنك جاهز لاستئناف العمل.</li></ul>
 <p>مطاعم توفر طاولات لتناول الطعام في الهواء الطلق</p>
 <ul><li>اتبع هذه <a href="https://files.covid19.ca.gov/pdf/guidance-outdoor-restaurants--en.pdf">التوجيهات الخاصة بالمطاعم التي تقدم وجبات سريعة وتوفر طاولات لتناول الطعام في الهواء الطلق وتعطيك الوجبات دون مغادرة سيارتك وتوفر خدمات التوصيل</a> لتوفير بيئة أكثر أمانًا للموظفين والزبائن.</li><li>استعرض التوجيهات، وقم بإعداد خطة لمكان عملك لكي تبين للعملاء والموظفين أنك قد قللت من المخاطر وأنك جاهز لاستئناف العمل.</li></ul>
 <p>المطاعم والخمارات والحانات</p>
-<ul><li>اتبع هذه <a href="https://files.covid19.ca.gov/pdf/guidance-restaurants-bars-wineries--ar.pdf">التوجيهات الخاصة بالمطاعم والخمارات والحانات</a> لتوفير بيئة أكثر أمانًا للموظفين والزبائن.</li><li>راجع التوجيهات، وجهز خطة وانشر <a href="https://files.covid19.ca.gov/pdf/checklist-restaurants-bars--ar.pdf">قائمة مراجعة بالمطاعم والخمارات والحانات</a> في مكان عملك لكي تبين للعملاء والموظفين أنك قللت من المخاطر وأن مشروعك التجاري مفتوح للعمل. </li></ul>
+<ul><li>اتبع هذه <a href="https://files.covid19.ca.gov/pdf/guidance-restaurants-bars-wineries--ar.pdf">التوجيهات الخاصة بالمطاعم والخمارات والحانات</a> لتوفير بيئة أكثر أمانًا للموظفين والزبائن.</li><li>راجع التوجيهات، وجهز خطة وانشر <a href="https://files.covid19.ca.gov/pdf/checklist-restaurants-bars--ar.pdf">قائمة مراجعة بالمطاعم والخمارات والحانات</a> في مكان عملك لكي تبين للعملاء والموظفين أنك قللت من المخاطر وأن مشروعك التجاري مفتوح للعمل.</li></ul>
 <p>المطاعم التي بها صالات لتناول الطعام</p>
 <ul><li>اتبع هذه <a href="https://files.covid19.ca.gov/pdf/guidance-dine-in-restaurants--ar.pdf">التوجيهات الخاصة بمطاعم بصالات لتناول الطعام</a> لتهيئة بيئة أكثر أمنًا للعاملين والزبائن.</li><li>راجع التوجيهات، وجهز خطة وانشر <a href="https://files.covid19.ca.gov/pdf/checklist-dine-in-restaurants--ar.pdf">قائمة مراجعة بالمطاعم التي بها صالات لتناول الطعام</a> في مكان عملك لكي تبين للعملاء والموظفين أنك قللت من المخاطر وأن مشروعك التجاري مفتوح للعمل.</li></ul>
 
@@ -2106,7 +2106,7 @@
 
 
 
-    <!-- Ethnio Activation Code --> <script type="text/javascript" language="javascript" src="//ethn.io/22981.js" async="true" defer charset="utf-8"></script>    <p> </p>
+    <!-- Ethnio Activation Code --> <script type="text/javascript" language="javascript" src="//ethn.io/22981.js" async="true" defer="" charset="utf-8"></script>    <p> </p>
 </div>
     </div>
   </div>
