--- a/ar/stay-home-except-for-essential-needs/index.html
+++ b/ar/stay-home-except-for-essential-needs/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>حول قيود  كوفيد-19.</h1>
           
-            <p class="small-text">Last updated&nbsp;8:59 ص الساعة 23 نوفمبر 2020</p>
+            <p class="small-text">Last updated&nbsp;12:47 م الساعة 25 نوفمبر 2020</p>
           
         </div>
       </div>
@@ -1012,13 +1012,13 @@
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
       <div class="card-body">
-<p>ابق في مقاطعتك إذا استطعت. لا تقد السيارة لأكثر من 2-3 ساعات.</p>
-<p>يمكنك السفر من أجل الأمور العاجلة أو إذا كان هذا السفر ضروريًا لقيامك بعملك المسموح به. على الرغم من انفتاح الأعمال التجارية في جميع أنحاء الولاية، تجنب السفر لمسافات طويلة لقضاء الإجازات أو المتعة قدر الإمكان. وهذا لإبطاء انتشار فيروس كورونا. لا تسافر في حال كنت مريضًا، أو في حال كان أحد أفراد أسرتك مصابًا بفيروس كورونا في آخر أسبوعين. لا تسافر بصحبة شخص مريض. </p>
+<p>ابق في مقاطعتك إذا استطعت. لا تقد السيارة لأكثر من 2-3 ساعات. أصدرت إدارة الصحة العامة بولاية كاليفورنيا <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Travel-Advisory.aspx">إرشادات للسفر</a> تشجع سكان كاليفورنيا على تجنب السفر غير الضروري.</p>
+<p>يمكنك السفر من أجل الأمور الملحة أو إذا كان ذلك السفر ضروريًا لقيامك بعملك المسموح به. على الرغم من انفتاح الأعمال التجارية في جميع أنحاء الولاية، تجنب السفر لمسافات طويلة لقضاء الإجازات أو المتعة قدر الإمكان. وهذا لإبطاء انتشار فيروس كورونا. لا تسافر في حال كنت مريضًا، أو في حال كان أحد أفراد أسرتك مصابًا بفيروس كورونا في آخر أسبوعين. لا تسافر بصحبة شخص مريض. </p>
 <p>يجب عليك مراجعة إدارة الصحة العامة المحلية للتحقق من أين تبدأ وطول خط سيرك ووجهتك المخططة لها للحصول على معلومات. اعلم أن القواعد المحلية تتغير باستمرار وقد تتغير حتى بعد أن تبدأ رحلتك. <a href="https://www.visitcalifornia.com/latest-covid-19-coronavirus">تحقق من تحديثات السفر</a> قبل أن تغادر منزلك.</p>
 <p>قبل السفر لمسافة بعيدة عن مجتمعك، ضع في اعتبارك هذه الأسئلة من الدليل التوجيهي للسفر الخاص<a href="https://www.cdc.gov/coronavirus/2019-ncov/travelers/travel-in-the-us.html"> بمركز السيطرة على الأمراض (CDC)</a>:</p>
-<ul><li>هل ينتشر فيروس كورونا في المكان الذي ستسافر إليه؟</li><li>هل أنت أو أولئك الذين ستسافر بصحبتهم تزداد احتمالية إصابتهم بفيروس كورونا بشكل كبير؟</li><li>هل ستتمكن من الحفاظ على التباعد الجسدي مسافة 6 أقدام عن الآخرين أثناء أو بعد رحلتك؟</li></ul>
+<ul><li>هل ينتشر فيروس كورونا في المكان الذي ستسافر إليه؟</li><li>هل أنت أو أولئك الذين ستسافر بصحبتهم تزداد احتمالية إصابتهم بفيروس كورونا بشكل كبير؟</li><li>هل ستتمكن من الحفاظ على التباعد الجسدي مسافة 6 أقدام عن الآخرين في أثناء رحلتك أو بعدها؟</li></ul>
 <div><!-- wedding, travel, gathering, tourism, funeral, motel, vacation, airbnb, vrbo, rental home --></div>
-<p>إذا كنت مسافرًا، فاتخذ بعض الخطوات للحفاظ على سلامة الجميع مثل أن ترتدي غطاء الوجه، وأن تحافظ على التباعد الجسدي مسافة 6 أقدام من هؤلاء الذين ليسوا من أفراد أسرتك، وأن تغسل يديك كثيرًا.  </p>
+<p>إذا كنت تسافر  خارج الولاية، فعند عودتك، ينبغي عليك الخضوع للحجر الصحي الذاتي لمدة 14 يومًا فور وصولك. وينبغي عليك أيضًا قصر تعاملاتك مع أسرتك المباشرة. لا تسري هذه التوصية إذا عبرت حدود الولاية أو المقاطعة للقيام بسفر ضروري. </p>
 
       </div>
     </div>
@@ -1060,13 +1060,13 @@
   <div class="card">
     <button class="card-header accordion-alpha" type="button" aria-expanded="false">
       <div class="accordion-title">
-<h4>هل توجد قيود على السفر داخل كاليفورنيا؟</h4>
+<h4>هل توجد قيود على السفر في داخل كاليفورنيا؟</h4>
       </div>
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
       <div class="card-body">
-<p>لمنع المزيد من انتشار كوفيد-19، يجب ألا يتنقل سكان كاليفورنيا لمسافات كبيرة وأن يبقوا في أماكن قريبة من منازلهم قدر الإمكان.</p>
-<p>ابق في مقاطعتك إذا استطعت. لا تقد السيارة لأكثر من 2-3 ساعات.</p>
+<p>لمنع انتشار كوفيد-19بشكل أكبر، يجب ألا يتنقل سكان كاليفورنيا لمسافات كبيرة، وأن يبقوا في أماكن قريبة من منازلهم قدر الإمكان. راجع <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Travel-Advisory.aspx">إرشادات السفر</a> الخاصة بوزارة الصحة العامة بكاليفورنيا لمزيد من المعلومات.</p>
+<p>ابق في مقاطعتك إن استطعت. لا تقد السيارة لأكثر من 2-3 ساعات.</p>
 
       </div>
     </div>
@@ -1093,13 +1093,33 @@
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
       <div class="card-body">
-<p>لا توجد حاليًا قيود على دخول كاليفورنيا إذا كنت قادمًا من ولاية أخرى داخل الولايات المتحدة ولقد فرضت الحكومة الفيدرالية قيودًا على بعض المسافرين الدوليين. مع استثناءات محددة، يُمنع الأجانب الذين زاروا ولايات معينة خلال الـ 14 يومًا الماضية من دخول الولايات المتحدة. يجب على جميع المسافرين اتخاذ احتياطات السلامة عند التفكير في السفر.</p>
+<p>لا توجد قيود حالية لدخول كاليفورنيا إذا كنت قادم من ولاية أخرى في الولايات المتحدة الأمريكية، ومع ذلك، أصدرت كاليفورنيا وواشنطن وأوريغون <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Travel-Advisory.aspx">إرشادات للسفر غير الضروري</a>. </p>
+<p>إذا كنت قادمًا إلى كاليفورنيا من ولايات أو مقاطعات أخرى، بما يشمل سكان كاليفورنيا العائدين إليها، ينبغي عليك الخضوع للحجر الصحي الذاتي لمدة 14 يومًا من تاريخ الوصول. وينبغي عليك أيضًا قصر تعاملاتك مع أسرتك المباشرة. لا تسري هذه التوصية إذا عبرت حدود الولاية أو المقاطعة من أجل السفر الضروري. </p>
+<p>على سكان كاليفورنيا البقاء في منازلهم أو في منطقتهم وتجنب السفر غير الضروري إلى ولايات أو مقاطعات أخرى. يمكن أن يساعد تجنب السفر في الحد من خطر انتقال الفيروس، وإحضاره مجددًا إلى كاليفورنيا.</p>
+<p>وضعت الحكومة الفيدرالية قيودًا على فئة معينة من المسافرين الدوليين. مع استثناءات محددة، يُمنع الأجانب الذين زاروا ولايات معينة خلال الـ 14 يومًا الماضية من دخول الولايات المتحدة. يجب على جميع المسافرين اتخاذ احتياطات السلامة عند التفكير في السفر.</p>
 <ul><li>لا تسافر إذا كنت مريضًا خلال الـ 14 يومًا الماضية أو إذا كنت تعيش مع شخص مصاب بـكوفيد-19.</li><li>لا تسافر بصحبة شخص مريض.</li><li>ارتدِ قناعًا في الأماكن العامة.</li><li>اغسل يديك.</li><li>حافظ على مسافة 6 أقدام بينك وبين أي شخص لا تعيش معه.</li></ul>
+<p>راجع <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Travel-Advisory.aspx">إرشادات السفر</a> الخاصة بإدارة الصحة العامة بكاليفورنيا لمزيد من المعلومات.</p>
 
       </div>
     </div>
   </div>
 </cwds-accordion>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
