--- a/ko/get-local-information/index.html
+++ b/ko/get-local-information/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>지역 정보 및 경보</h1>
           
-            <p class="small-text">Last updated&nbsp;2020년 11월 5일 오전 9:58</p>
+            <p class="small-text">Last updated&nbsp;2020년 11월 25일 오후 4:00</p>
           
         </div>
       </div>
@@ -175,11 +175,7 @@
 
 
 
-<p>캘리포니아 내 카운티 별로 신규 사례 발생율 및 양성 판정율에 근거하여 단계를 배정합니다. 운영 개시가 가능한 사업체 및 활동을 확인하려면 <a href="/ko/safer-economy/">해당 카운티의 단계 현황</a>을 참조하십시오.</p>    <a class="action-link" href="/ko/sign-up-for-county-alerts/"><span class="ca-gov-icon-warning-circle"></span> 카운티 경보 수신 등록</a></p>
-
-
-
-<p>캘리포니아 내 각 도시, 카운티 및 지방 정부는 COVID-19 사태에 대응하기 위해 노력하고 있습니다. </p>
+<p>캘리포니아 내 카운티 별로 신규 사례 발생율 및 양성 판정율에 근거하여 단계를 배정합니다. 운영 개시가 가능한 사업체 및 활동을 확인하려면 <a href="/ko/safer-economy/">해당 카운티의 단계 현황</a>을 참조하십시오.</p>    <a class="action-link" href="/ko/sign-up-for-county-alerts/"><span class="ca-gov-icon-warning-circle"></span><strong> 카운티 경보 수신 등록</strong></a>    <p>캘리포니아 내 각 도시, 카운티 및 지방 정부는 COVID-19 사태에 대응하기 위해 노력하고 있습니다. </p>
 
 
 
