--- a/tl/industry-guidance/index.html
+++ b/tl/industry-guidance/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Gabay sa industriya sa pagpapababa ng panganib</h1>
           
-            <p class="small-text">Last updated&nbsp;Nobyembre 16, 2020 sa 4:09 PM</p>
+            <p class="small-text">Last updated&nbsp;Nobyembre 24, 2020 sa 7:23 PM</p>
           
         </div>
       </div>
@@ -1766,11 +1766,11 @@
 <p>Minimal (dilaw)</p>
 <ul><li>Mga restaurant: <ul><li>Indoor nang may mga modipikasyon</li><li>Dapat ay limitado sa 25% ang kapasidad</li></ul></li><li>Mga winery:<ul><li>Indoor nang may mga modipikasyon</li><li>Ang kapasidad ay dapat limitado sa 50% o 200 tao, whichever is less</li></ul></li><li>Mga bar, brewery, at distillery: <ul><li>Indoor nang may mga modipikasyon</li><li>Dapat ay limitado sa 25% ang kapasidad</li></ul></li></ul>
 <p>Mga restaurant na may take-out</p>
-<ul><li>Sundin ang <a href="https://files.covid19.ca.gov/pdf/guidance-take-out-restaurants--en.pdf">gabay na ito para sa mga restaurant na may take-out, drive-through, at delivery</a> para makagawa ng ligtas na lugar para sa mga manggagawa at tagatangkilik. </li><li>Suriin ang gabay at maghanda ng plano sa iyong lugar ng trabaho para maipakita sa mga customer at empleyado na binawasan mo ang panganib at bukas ka na para magnegosyo.</li></ul>
+<ul><li>Sundin ang <a href="https://files.covid19.ca.gov/pdf/guidance-take-out-restaurants--en.pdf">gabay na ito para sa mga restaurant na may take-out, drive-through, at delivery</a> para makagawa ng ligtas na lugar para sa mga manggagawa at tagatangkilik.</li><li>Suriin ang gabay at maghanda ng plano sa iyong lugar ng trabaho para maipakita sa mga customer at empleyado na binawasan mo ang panganib at bukas ka na para magnegosyo.</li></ul>
 <p>Outdoor na dining</p>
 <ul><li>Sundin ang <a href="https://files.covid19.ca.gov/pdf/guidance-outdoor-restaurants--en.pdf">gabay na ito para sa mga restaurant na may outdoor na dining, drive-through, at delivery</a> para makagawa ng ligtas na lugar para sa mga manggagawa at tagatangkilik.</li><li>Suriin ang gabay at maghanda ng plano sa iyong lugar ng trabaho para maipakita sa mga customer at empleyado na binawasan mo ang panganib at bukas ka na para magnegosyo.</li></ul>
 <p>Mga restaurant, winery, at bar</p>
-<ul><li>Sundin ang <a href="https://files.covid19.ca.gov/pdf/guidance-restaurants-bars-wineries--tl.pdf">gabay na ito para sa mga restaurant, winery, at bar</a> para makagawa ng ligtas na lugar para sa mga manggagawa at tagatangkilik.</li><li><a href="https://files.covid19.ca.gov/pdf/checklist-restaurants-bars--tl.pdf">Suriin ang gabay, maghanda ng plano, at ipaskil ang </a>checklist para sa mga restaurant, winery, at bar sa iyong lugar ng trabaho para maipakita sa mga customer at empleyado na binawasan mo ang panganib at bukas ka na para sa negosyo. </li></ul>
+<ul><li>Sundin ang <a href="https://files.covid19.ca.gov/pdf/guidance-restaurants-bars-wineries--tl.pdf">gabay na ito para sa mga restaurant, winery, at bar</a> para makagawa ng ligtas na lugar para sa mga manggagawa at tagatangkilik.</li><li><a href="https://files.covid19.ca.gov/pdf/checklist-restaurants-bars--tl.pdf">Suriin ang gabay, maghanda ng plano, at ipaskil ang </a>checklist para sa mga restaurant, winery, at bar sa iyong lugar ng trabaho para maipakita sa mga customer at empleyado na binawasan mo ang panganib at bukas ka na para sa negosyo.</li></ul>
 <p>Mga kainan na may serbisyong dine-in</p>
 <ul><li>Sundin ang <a href="https://files.covid19.ca.gov/pdf/guidance-dine-in-restaurants--tl.pdf">gabay para sa mga kainang may serbisyong dine-in</a> na ito para gumawa ng mas ligtas na lugar para sa mga manggagawa at customer.</li><li>Suriin ang gabay, maghanda ng plano, at ipaskil ang <a href="https://files.covid19.ca.gov/pdf/checklist-dine-in-restaurants--tl.pdf">checklist para sa mga dine-in na restaurant</a> sa iyong lugar ng trabaho para maipakita sa mga customer at empleyado na binawasan mo ang panganib at bukas ka na para sa negosyo.</li></ul>
 
@@ -2106,7 +2106,7 @@
 
 
 
-    <!-- Ethnio Activation Code --> <script type="text/javascript" language="javascript" src="//ethn.io/22981.js" async="true" defer charset="utf-8"></script>    <p> </p>
+    <!-- Ethnio Activation Code --> <script type="text/javascript" language="javascript" src="//ethn.io/22981.js" async="true" defer="" charset="utf-8"></script>    <p> </p>
 </div>
     </div>
   </div>
