--- a/vi/stay-home-except-for-essential-needs/index.html
+++ b/vi/stay-home-except-for-essential-needs/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Về những hạn chế trong đại dịch COVID-19</h1>
           
-            <p class="small-text">Last updated&nbsp;23 tháng 11, 2020 lúc 14:14</p>
+            <p class="small-text">Last updated&nbsp;25 tháng 11, 2020 lúc 24:47</p>
           
         </div>
       </div>
@@ -1012,13 +1012,13 @@
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
       <div class="card-body">
-<p>Ở lại quận của quý vị nếu quý vị có thể. Đừng lái xe quá 2-3 giờ.</p>
-<p>Quý vị có thể ra ngoài trong trường hợp khẩn cấp hoặc nếu việc đó là cần thiết cho các công việc được phép. Mặc dù các doanh nghiệp trên toàn tiểu bang sẽ được mở cửa, nhưng cần tránh đi du lịch xa để nghỉ ngơi hoặc giải trí nếu có thể. Điều này giúp làm chậm quá trình lây lan vi-rút corona. Không đi du lịch nếu quý vị bị ốm hoặc nếu ai đó trong gia đình quý vị nhiễm vi-rút corona trong hai tuần qua. Không đi du lịch với người ốm. </p>
+<p>Ở lại quận của quý vị nếu quý vị có thể. Đừng lái xe quá 2-3 giờ. Sở Y Tế Công Cộng California đã ban hành <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Travel-Advisory.aspx">Cảnh Báo Đi Lại</a> khuyến khích người dân California tránh các chuyến đi không thiết yếu.</p>
+<p>Quý vị có thể đi lại trong trường hợp khẩn cấp hoặc nếu đó là chuyến đi cần thiết cho các công việc được phép. Mặc dù các doanh nghiệp trên toàn tiểu bang sẽ được mở cửa, nhưng cần tránh đi du lịch xa để nghỉ ngơi hoặc giải trí nếu có thể. Điều này giúp làm chậm quá trình lây lan vi-rút corona. Không đi du lịch nếu quý vị bị ốm hoặc nếu ai đó trong gia đình quý vị nhiễm vi-rút corona trong hai tuần qua. Không đi du lịch với người ốm. </p>
 <p>Quý vị nên kiểm tra với sở y tế địa phương nơi quý vị bắt đầu, dọc theo tuyến đường và tại điểm đến dự kiến để biết thông tin. Quý vị hãy hiểu rằng các quy định của địa phương không ngừng thay đổi và thậm chí có thể thay đổi sau khi quý vị bắt đầu chuyến đi. <a href="https://www.visitcalifornia.com/latest-covid-19-coronavirus">Kiểm tra thông tin cập nhật về du lịch</a> trước khi quý vị rời khỏi nhà.</p>
 <p>Trước khi ra khỏi cộng đồng của quý vị, hãy cân nhắc những câu hỏi này từ <a href="https://www.cdc.gov/coronavirus/2019-ncov/travelers/travel-in-the-us.html">hướng dẫn đi lại của Trung Tâm Kiểm Soát Dịch Bệnh (Center for Disease Control, CDC)</a>:</p>
 <ul><li>Có dịch bệnh vi-rút corona ở nơi mà quý vị sẽ đến không?</li><li>Quý vị hoặc người đi cùng quý vị có khả năng bị nhiễm vi-rút corona cao không?</li><li>Quý vị sẽ có thể giữ khoảng cách 6 foot với những người khác trong hoặc sau chuyến đi không?</li></ul>
 <div><!-- wedding, travel, gathering, tourism, funeral, motel, vacation, airbnb, vrbo, rental home --></div>
-<p>Nếu quý vị ra ngoài, hãy thực hiện các bước để giữ an toàn cho mọi người như đeo đồ che mặt, giữ khoảng cách 6 foot với những người không phải người thân trong hộ gia đình và rửa tay thường xuyên.  </p>
+<p>Nếu quý vị đi ra khỏi tiểu bang, khi quý vị trở về, quý vị cần thực hiện tự cách ly trong 14 ngày sau khi trở về. Quý vị cũng cần hạn chế tiếp xúc với những người quý vị thường xuyên tiếp xúc. Khuyến nghị này không áp dụng nếu quý vị đi qua biên giới tiểu bang hoặc quốc gia do nhu cầu đi lại thiết yếu. </p>
 
       </div>
     </div>
@@ -1065,7 +1065,7 @@
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
       <div class="card-body">
-<p>Để ngăn ngừa COVID-19 lây lan thêm, người dân ﻿California không nên đi lại xa nhà và hãy ở gần nhà nhiều nhất có thể.</p>
+<p>Để ngăn ngừa đại dịch COVID-19 lây lan thêm, người dân ﻿California không nên đi lại xa nhà và nên ở gần nhà nhiều nhất có thể. Xem <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Travel-Advisory.aspx">Cảnh Báo Đi Lại</a> của Sở Y Tế Công Cộng California để biết thêm thông tin.</p>
 <p>Ở lại quận của quý vị nếu quý vị có thể. Đừng lái xe quá 2-3 giờ.</p>
 
       </div>
@@ -1088,18 +1088,38 @@
   <div class="card">
     <button class="card-header accordion-alpha" type="button" aria-expanded="false">
       <div class="accordion-title">
-<h4>Có hạn chế đi lại trong hoặc ra bên ngoài tiểu bang California﻿ không?</h4>
+<h4>Có hạn chế đi vào hoặc rời khỏi tiểu bang California﻿ không?</h4>
       </div>
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
       <div class="card-body">
-<p>Hiện không có hạn chế nào đối với việc ra vào tiểu bang California nếu bạn đến từ tiểu bang khác của Hoa Kỳ. Chính phủ liên bang đã đặt ra các hạn chế cho một số du khách quốc tế. Với các trường hợp ngoại lệ cụ thể, các công dân nước ngoài đến thăm một số nước nhất định trong 14 ngày trước đó bị cấm nhập cảnh vào Hoa Kỳ. Tất cả các du khách đều phải thực hiện các biện pháp phòng ngừa khi được xem xét đi lại.</p>
-<ul><li>Không đi lại nếu quý vị đã bị ốm trong 14 ngày trước đó hoặc nếu quý vị đang sống với người mắc COVID-19.</li><li>Không đi du lịch với người ốm.</li><li>Đeo khẩu trang ở nơi công cộng.</li><li>Rửa tay.</li><li>Giữ khoảng cách 6 foot với người mà quý vị không sống cùng.</li></ul>
+<p>Hiện không có hạn chế đi vào tiểu bang California nếu quý vị đến từ một tiểu bang khác tại Hoa Kỳ nhưng California, cùng với Washington và Oregon, đã ban hành <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Travel-Advisory.aspx">Cảnh Báo Đi Lại cho Chuyến Đi Không Thiết Yếu</a>. </p>
+<p>Nếu từ các tiểu bang hoặc quốc gia khác đến California, bao gồm cả trường hợp là cư dân California trở về, quý vị cần tiến hành tự cách ly kiểm dịch trong 14 ngày sau khi đến. Quý vị cũng cần hạn chế tiếp xúc với những người quý vị thường xuyên tiếp xúc. Khuyến nghị này không áp dụng nếu quý vị đi qua biên giới tiểu bang hoặc quốc gia do nhu cầu đi lại thiết yếu. </p>
+<p>Khuyến khích người dân California ở nhà hoặc trong khu vực của mình và tránh các chuyến đi không thiết yếu đến các tiểu bang hoặc quốc gia khác. Tránh đi lại có thể giúp giảm thiểu nguy cơ lây truyền vi-rút và mang theo vi-rút vào California.</p>
+<p>Chính quyền liên bang đã áp dụng các hạn chế đối với một số du khách quốc tế. Với các trường hợp ngoại lệ cụ thể, các công dân nước ngoài đã ghé qua một số quốc gia nhất định trong 14 ngày trước đó bị cấm nhập cảnh vào Hoa Kỳ. Tất cả các du khách đều phải thực hiện các biện pháp phòng ngừa khi được xem xét đi lại.</p>
+<ul><li>Không đi lại nếu quý vị đã bị ốm trong 14 ngày trước đó hoặc nếu quý vị đang sống với người mắc COVID-19.</li><li>Không đi du lịch với người ốm.</li><li>Đeo khẩu trang ở nơi công cộng.</li><li>Rửa tay.</li><li>Giữ khoảng cách 6 foot và đeo khẩu trang khi ở gần những người không sống cùng quý vị.</li></ul>
+<p>Để biết thêm thông tin, hãy xem <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Travel-Advisory.aspx">Cảnh Báo Đi Lại</a> của Sở Y Tế Công Cộng California.</p>
 
       </div>
     </div>
   </div>
 </cwds-accordion>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
