--- a/zh-hans/get-local-information/index.html
+++ b/zh-hans/get-local-information/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>当地信息及预警</h1>
           
-            <p class="small-text">Last updated&nbsp;2020年11月5日, 上午9:58</p>
+            <p class="small-text">Last updated&nbsp;2020年11月25日, 下午4:00</p>
           
         </div>
       </div>
@@ -175,11 +175,7 @@
 
 
 
-<p>加州各县根据各自的新增病例和检测呈阳性率被归至某个等级。查看<a href="/zh-hans/safer-economy/">您所在县的等级情况</a>，了解哪些商业和活动可以开放。</p><a class="action-link" href="/zh-hans/sign-up-for-county-alerts/"><span class="ca-gov-icon-warning-circle"></span> 注册以接收县预警</a></p>
-
-
-
-<p>加州各个市、县和地方政府正在努力应对COVID-19。 </p>
+<p>加州各县根据各自的新增病例和检测呈阳性率被归至某个等级。查看<a href="/zh-hans/safer-economy/">您所在县的等级情况</a>，了解哪些商业和活动可以开放。</p><a class="action-link" href="/zh-hans/sign-up-for-county-alerts/"><span class="ca-gov-icon-warning-circle"></span><strong> 注册以接收县预警</strong></a>    <p>加州各个市、县和地方政府正在努力应对COVID-19。 </p>
 
 
 
