--- a/zh-hant/get-local-information/index.html
+++ b/zh-hant/get-local-information/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>當地資訊及預警</h1>
           
-            <p class="small-text">Last updated&nbsp;2020年11月5日, 上午9:58</p>
+            <p class="small-text">Last updated&nbsp;2020年11月25日, 下午4:00</p>
           
         </div>
       </div>
@@ -175,11 +175,7 @@
 
 
 
-<p>加州各縣根據各自的新增病例和檢測呈陽性率被歸為某一等級。查看<a href="/zh-hant/safer-economy/">您所在縣的等級情況</a>，以了解哪些商業和活動可以開放。</p><a class="action-link" href="/zh-hant/sign-up-for-county-alerts/"><span class="ca-gov-icon-warning-circle"></span> 註冊以接收縣預警</a></p>
-
-
-
-<p>加州的各個市、縣和地方政府都在努力應對新型冠狀病毒。 </p>
+<p>加州各縣根據各自的新增病例和檢測呈陽性率被歸為某一等級。查看<a href="/zh-hant/safer-economy/">您所在縣的等級情況</a>，以了解哪些商業和活動可以開放。</p><a class="action-link" href="/zh-hant/sign-up-for-county-alerts/"><span class="ca-gov-icon-warning-circle"></span><strong> 註冊以接收縣預警</strong></a>    <p>加州的各個市、縣和地方政府都在努力應對新型冠狀病毒。 </p>
 
 
 
