--- a/contact-tracing/index.html
+++ b/contact-tracing/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Contact tracing</h1>
           
-            <p class="small-text">Last updated&nbsp;November 25, 2020 at 5:44 PM</p>
+            <p class="small-text">Last updated&nbsp;November 30, 2020 at 4:10 PM</p>
           
         </div>
       </div>
@@ -227,7 +227,7 @@
 
 
 
-<h3>Content tracing in California</h3>
+<h3>Contact tracing in California</h3>
 
 
 
