--- a/src/js/equity-dash/charts/relative-percentage-by-pop/snippet.html
+++ b/src/js/equity-dash/charts/relative-percentage-by-pop/snippet.html
@@ -11,4 +11,6 @@
     <li data-label="relative-percentage-statewide">% of cases statewide</li>
     <li data-label="relative-percentage-county">% of cases in county</li>
     <li data-label="county-label">County</li>
+    <li data-label="applied-suppression-total">To protect people’s privacy, we’re not showing any data. This is because there’s either too few cases or tests in this group.</li>
+    <li data-label="applied-suppression-population">To protect people’s privacy, we’re not showing any data. This is because there are less than 20,000 people in this group.</li>
   </ul></cagov-chart-re-pop>
