--- a/taxes/index.html
+++ b/taxes/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Taxes</h1>
           
-            <p class="small-text">Last updated&nbsp;November 25, 2020 at 4:22 PM</p>
+            <p class="small-text">Last updated&nbsp;November 30, 2020 at 4:40 PM</p>
           
         </div>
       </div>
@@ -191,7 +191,7 @@
 
 
 
-<ul><li>Interest-free deferral of sales/use tax up to $50,000 for businesses with less than $5 million in taxable sales</li><li>A $1,000 tax credit for new employees hired by small businesses (up to $100,000 per business)</li><li>Excluding forgiven Paycheck Protection Program loans from state gross income</li><li>Federal tax credits to small businesses for COVID-19 employee paid leave</li></ul>
+<ul><li>The Small Business Hiring Tax Credit, a $1,000 tax credit for each new employee hired by small businesses (up to $100,000 per business)<ul><li>To apply for this credit, visit the <a href="https://www.cdtfa.ca.gov/taxes-and-fees/SB1447-tax-credit.htm">Department of Tax and Fee Administration’s website</a></li></ul></li><li>Interest-free deferral of sales/use tax up to $50,000 for businesses with less than $5 million in taxable sales</li><li>Excluding forgiven Paycheck Protection Program loans from state gross income</li><li>Federal tax credits to small businesses for COVID-19 employee paid leave</li></ul>
 
 
 
